--- a/herqq/apps/simple_avtest-app/mediaserver_window.ui
+++ b/herqq/apps/simple_avtest-app/mediaserver_window.ui
@@ -22,7 +22,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTableWidget" name="rootDirectoriesTable">
+     <widget class="QTableWidget" name="sharedItemsTable">
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
@@ -56,7 +56,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Root Directory</string>
+        <string>Path</string>
        </property>
       </column>
      </widget>
@@ -66,7 +66,7 @@
       <property name="sizeConstraint">
        <enum>QLayout::SetMinimumSize</enum>
       </property>
-      <item row="3" column="1">
+      <item row="4" column="3">
        <widget class="QCheckBox" name="watchCheckBox">
         <property name="enabled">
          <bool>false</bool>
@@ -79,7 +79,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="3">
+      <item row="4" column="5">
        <widget class="QCheckBox" name="scanRecursivelyCheckbox">
         <property name="layoutDirection">
          <enum>Qt::RightToLeft</enum>
@@ -92,17 +92,27 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="4">
+      <item row="4" column="6">
        <widget class="QPushButton" name="addContentButton">
         <property name="text">
          <string>&amp;Add New Root Directory</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="1">
+       <widget class="QPushButton" name="addItemButton">
+        <property name="text">
+         <string>Add Items</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="2">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
